--- a/index.html
+++ b/index.html
@@ -410,8 +410,17 @@
         </div>
         <br><br>
         <hr style="height: 1px; background-color: rgb(113, 149, 190); border: none;">
-        <div class="footer-last">
-            Copyright ©2020 All rights reserved | This template is made by Bhupiidx
+        <div class="footer-last d-flex justify-content-between">
+            <div>
+                Copyright ©2020 All rights reserved | This template is made by Bhupiidx
+            </div>
+            <div class="media-class">
+                <a href="#"><i class="fa fa-facebook-f fa-2x"></i></a>
+                <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+                <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+            </div>
+
         </div>
     </footer>
 
